crates/near-kit-macros/tests/compile-fail/unknown_call_option.stderr
error: unknown call option 'lazy', expected 'payable'
 --> tests/compile-fail/unknown_call_option.rs:7:12
  |
7 |     #[call(lazy)]
  |            ^^^^

warning: unused import: `near_kit::*`
 --> tests/compile-fail/unknown_call_option.rs:3:5
  |
3 | use near_kit::*;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
